# agile-examination-grading

./: .gitignore  AGENTS.md
backend/: .coverage  coverage.xml  pyproject.toml
backend/src/: db.py  main.py
backend/src/routers/: auth.py  course.py  exams.py  grading.py  question.py  report.py  submission.py  take_exam.py
backend/src/services/: auth_service.py  course_service.py  email_service.py  exams_service.py  question_service.py  report_service.py  submission_service.py  take_exam_service.py
backend/static/: auth.js  courseDetail.css  courseManage.css  courseManagement.css  script.js  style.css
backend/templates/: courseDetail.html  courseManagement.html  examDetails.html  examGrading.html  examManagement.html  examReportList.html  exam_list.html  forgot_password.html  index.html  login.html  performanceReportDetails.html  register.html  reset_password.html  studentCourse.html  studentExam.html  studentSubmissionList.html  studentSubmissionReview.html  studentTakingExam.html
backend/tests/: conftest.py
backend/tests/acceptance/: test_acceptance_add_essay.py  test_acceptance_courseManagement.py  test_acceptance_create_exam.py  test_acceptance_delete_question.py  test_acceptance_enroll.py  test_acceptance_essayMarking_api.py  test_acceptance_essay_submission.py  test_acceptance_examPerformanceReport.py  test_acceptance_examSubmissionList_api.py  test_acceptance_exam_api.py  test_acceptance_exam_search.py  test_acceptance_lateSubmission_api.py  test_acceptance_login.py  test_acceptance_open_exam.py  test_acceptance_overall_feedback.py  test_acceptance_resetPassword.py  test_acceptance_search_instructorSide_submission  test_acceptance_search_instructorside_submission.py  test_acceptance_search_studentside_submission.py  test_acceptance_studentReview_api.py  test_acceptance_student_overall_result.py  test_acceptance_submission_view.py  test_acceptance_take_exam_essay_api.py  test_acceptance_take_exam_mcq_autograde_api.py  test_acceptance_take_exam_mcq_submission_api.py  test_acceptance_update_essay.py  test_acceptance_update_mcq.py  test_countdown_timer_story.py  test_exam_submission_story.py  test_mcq_exam_api.py  test_mcq_grading_story.py
backend/tests/feature/: addEssay.feature  addMCQ.feature  countdown_timer.feature  create_exam.feature  delete_question.feature  enrollCourse.feature  essayMarking.feature  essay_submission.feature  exam.feature  (+22 more)
(+37 files in other folders)
